Update 'fa5ed7tuz-python' component image to: quay.io/rhtap_qe/rhtap-qe:d6ca556f333e10740a6ba75ffaf0670a8d6196c1@sha256:17bba23d12dd173c29ccc6dab1832d18c8fe8ed377378021750f6cea2dd1f84e

--- a/components/fa5ed7tuz-python/overlays/development/deployment-patch.yaml
+++ b/components/fa5ed7tuz-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fa5ed7tuz-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:d6ca556f333e10740a6ba75ffaf0670a8d6196c1@sha256:17bba23d12dd173c29ccc6dab1832d18c8fe8ed377378021750f6cea2dd1f84e
+          name: container-image
